# a-maze-ing

./: .flake8  .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  config_parser.py  display.py  maze.txt-zflyvandu.gouv.fr  output_maze.txt  output_writer.py  pyproject.toml  requirements.txt
mazegen_src/: __init__.py  maze_generator.py
tests/: test_maze.py
